# axum-mcp

./: .gitignore  CHANGELOG.md  CLIENTS.md  CONFIGURATION.md  CONTRIBUTING.md  Cargo.toml  GITHUB_METADATA.md  README.md  REPO_METADATA_REVIEW.md
examples/: api_integration.rs
src/: lib.rs  tool.rs
tests/: comprehensive_integration_test.rs
